<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/parent"
        android:orientation="vertical"
        android:layout_gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="32dp"
            android:id="@+id/my_title"
            android:text="@string/my_title"
            android:textSize="24sp"
            android:gravity="center"/>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardBackgroundColor="@color/defaultColor"
            card_view:cardElevation="3dp"
            card_view:cardUseCompatPadding="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/media_streamer"
            android:text="@string/media_streamer"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:gravity="center"
            android:onClick="spotifyStreamer"
            android:background="@drawable/button"
            android:clickable="true"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardBackgroundColor="@color/defaultColor"
            card_view:cardElevation="3dp"
            card_view:cardUseCompatPadding="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/super_duo1"
            android:text="@string/super_duo1"
            android:onClick="superDuo1"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:background="@drawable/button"
            android:gravity="center"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardBackgroundColor="@color/defaultColor"
            card_view:cardElevation="3dp"
            card_view:cardUseCompatPadding="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/super_duo2"
            android:onClick="superDuo2"
            android:text="@string/super_duo2"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:background="@drawable/button"
            android:gravity="center"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardBackgroundColor="@color/defaultColor"
            card_view:cardElevation="3dp"
            card_view:cardUseCompatPadding="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ant_terminator"
            android:onClick="antTerminator"
            android:text="@string/ant_terminator"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:background="@drawable/button"
            android:gravity="center"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardBackgroundColor="@color/defaultColor"
            card_view:cardElevation="3dp"
            card_view:cardUseCompatPadding="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/materialize"
            android:onClick="materialize"
            android:text="@string/materialize"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:background="@drawable/button"
            android:gravity="center"
            android:clickable="true"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardBackgroundColor="@color/lastButtonColor"
            card_view:cardElevation="3dp"
            card_view:cardUseCompatPadding="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/capstone"
            android:onClick="capstone"
            android:text="@string/capstone"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:background="@drawable/last_button"
            android:gravity="center"
            android:clickable="true"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
